fix: update css to avoid layout shifts

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,16 +1,4 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
 }
